AI_Intergration_Service/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trinity
  labels:
    name: trinity
