AI_Intergration_Service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trinity-ai-service
  namespace: trinity
  labels:
    app: trinity-ai-service
spec:
  type: ClusterIP
  selector:
    app: trinity-ai-service
  ports:
  - name: http
    port: 8083
    targetPort: http
    protocol: TCP
